<resources>
    <string name="app_name">mamabike</string>
    <string name="scan_open_lock">扫码开锁</string>
    <string name="title_custom_service">客户服务</string>
    <string name="can_not_lock">开不了锁</string>
    <string name="fix">发现车辆故障</string>
    <string name="waring">举报违停</string>
    <string name="feedback">其他问题</string>
    <string name="pls_open_permission">请打开权限</string>
    <string name="use_help">使用帮助</string>
    <string name="open_lock_hint">对准车上的二维码</string>
    <string name="input_bike_code">输入单车编号</string>
    <string name="open_flash_light">打开手电筒</string>
    <string name="message_network_error">网络错误</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="authentication_code">验证码</string>
    <string name="get_authentication_code">获取验证码</string>
    <string name="hint_input_authentication">请输入验证码</string>
    <string name="input_right_bike_number">请输入正确的单车编号</string>
    <string name="unolocking">正在打开车锁</string>
    <string name="verify_phone">手机验证</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_trip">我的行程</string>
    <string name="login_out">退出登录</string>
    <string name="my_head_img">头像</string>
    <string name="nike_name">昵称</string>
    <string name="phone_number">手机号</string>
    <string name="mama_bike">码码单车</string>
    <string name="rode_time_format">骑行时间: %d 分钟</string>
    <string name="rode_cost_format">骑行花费: %.2f 元</string>
    <string name="get_time_fail">获取骑行时间失败</string>
    <string name="bike_number_format">单车编号: %s</string>
    <string name="my_rode_record">我的行程</string>
    <string name="loading">载入中..</string>
    <string name="in_rode">骑行中</string>
    <string name="end_ride">结束骑行</string>
    <string name="min">分钟</string>
    <string name="second">秒</string>
    <string name="unlock_success">解锁成功</string>
    <string name="lock_success">停车成功</string>
    <string name="ride_route">骑行路径</string>
    <string name="error_route">错误的路径</string>
    <string name="login_out_success">登出成功</string>
    <string name="ride_end">骑行已经结束</string>
</resources>
